--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -22,7 +22,7 @@ services:
       dockerfile: ci.Dockerfile
     env_file: .env
     environment:
-      PROXY_HEIGHT_BASED_ROUTING_ENABLED: true
+      PROXY_HEIGHT_BASED_ROUTING_ENABLED: "true"
       # use public testnet as backend origin server to avoid having
       # to self-host a beefy Github Action runner
       # to build and run a kava node each execution
