add env variable for test metric window extension

--- a/.env
+++ b/.env
@@ -40,9 +40,9 @@ TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_PRUNING_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
-TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
+TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777 >http://kava-validator:8545,localhost:7778 >http://kava-pruning:8545
 TEST_PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
-TEST_PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
+TEST_PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777 >http://kava-pruning:8545,localhost:7778 >http://kava-pruning:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
@@ -51,9 +51,12 @@ TEST_SERVICE_LOG_LEVEL=ERROR
 TEST_EVM_QUERY_SERVICE_URL=http://kava-validator:8545
 # TEST_REDIS_ENDPOINT_URL is an url of redis
 TEST_REDIS_ENDPOINT_URL=localhost:6379
+# tests for metrics look for metrics created within a given window of time.
+# TEST_EXTEND_METRIC_WINDOW_MS allows extending that window which is useful
+# for when tests fail because the metrics hadn't finished being created in the window.
+TEST_EXTEND_METRIC_WINDOW_MS=100
 
 ##### Kava Node Config
-
 
 ##### Kava Proxy Config
 # What port the proxy service listens on
@@ -62,12 +65,12 @@ LOG_LEVEL=DEBUG
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
-PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
+PROXY_BACKEND_HOST_URL_MAP=localhost:7777 >http://kava-validator:8545,localhost:7778 >http://kava-pruning:8545
 # height-based routing will look at the height of an incoming EVM request
 # iff. the height is "latest", it routes to the corresponding PROXY_PRUNING_BACKEND_HOST_URL_MAP value
 # otherwise, it falls back to the value in PROXY_BACKEND_HOST_URL_MAP
 PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
-PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
+PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777 >http://kava-pruning:8545,localhost:7778 >http://kava-pruning:8545
 # PROXY_MAXIMUM_REQ_BATCH_SIZE is a proxy-enforced limit on the number of subrequest in a batch
 PROXY_MAXIMUM_REQ_BATCH_SIZE=100
 # Configuration for the servcie to connect to it's database
@@ -149,7 +152,6 @@ HOSTNAME_TO_ACCESS_CONTROL_ALLOW_ORIGIN_VALUE_MAP=
 
 ##### Database Config
 POSTGRES_PASSWORD=password
-
 
 ##### Redis Config
 # for local development don't require a password to connect to the redis server
