add unit tests for shard routing proxies

--- a/.env
+++ b/.env
@@ -43,6 +43,7 @@ TEST_DATABASE_ENDPOINT_URL=localhost:5432
 TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
 TEST_PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
 TEST_PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
+TEST_PROXY_SHARD_BACKEND_HOST_URL_MAP=localhost:7777>10|http://kava-shard-10:8545|20|http://kava-shard-20:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
