support shard-based routing (#89)
* setup env & testing for shard routing

* setup two shard peer nodes

* set new .env for sharded nodes

* add intervalmap data structure

* add parsing of shard env variables

* rename HeightShardingProxies -> PruningOrDefaultProxies

* implement ShardProxies for shard routing

* scaffold new Proxies to handle shards

* handle shard routing

* update PruningOrDefaultProxies logs to Trace

* update failing test for shard routing

* add tests for shard backend responses

* add unit tests for shard routing proxies

* route "earliest" to first shard

also, prevent uint64 conversion underflows by routing any other block tag
that is encoded to a negative number to the default proxy

* configure shard routing in CI tests

* document shard-based routing

* make shards inclusive of end block

* add more validation to shard backend url map

parsing will error in cases of:
* unordered shards
* multiple shards for same endblock

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,34 @@ services:
       - "${KAVA_CONTAINER_COSMOS_RPC_PORT}"
       - "${KAVA_CONTAINER_EVM_RPC_PORT}"
 
+  # shards are in name only. they are standard peer nodes, but will only recieve traffic
+  # for a specific block range. kava-shard-10 receives requests for heights 1-10
+  kava-shard-10:
+    image: kava/kava:${KAVA_CONTAINER_TAG}
+    entrypoint: /docker/shared/kava-entrypoint.sh
+    env_file: .env
+    volumes:
+      - ./docker/shared:/docker/shared
+    # expose ports for other services to be able to connect to within
+    # the default docker-compose network
+    expose:
+      - "${KAVA_CONTAINER_COSMOS_RPC_PORT}"
+      - "${KAVA_CONTAINER_EVM_RPC_PORT}"
+
+  # shards are in name only. they are standard peer nodes, but will only recieve traffic
+  # for a specific block range. kava-shard-20 receives requests for heights 11-20
+  kava-shard-20:
+    image: kava/kava:${KAVA_CONTAINER_TAG}
+    entrypoint: /docker/shared/kava-entrypoint.sh
+    env_file: .env
+    volumes:
+      - ./docker/shared:/docker/shared
+    # expose ports for other services to be able to connect to within
+    # the default docker-compose network
+    expose:
+      - "${KAVA_CONTAINER_COSMOS_RPC_PORT}"
+      - "${KAVA_CONTAINER_EVM_RPC_PORT}"
+
   # run proxy service to observe, route, and scale requests to kava api endpoints
   proxy:
     build:
