--- a/.env
+++ b/.env
@@ -43,6 +43,7 @@ TEST_DATABASE_ENDPOINT_URL=localhost:5432
 TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
 TEST_PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
 TEST_PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
+TEST_PROXY_SHARD_BACKEND_HOST_URL_MAP=localhost:7777>10|http://kava-shard-10:8545|20|http://kava-shard-20:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
@@ -71,9 +72,12 @@ PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7
 # otherwise, it falls back to the value in PROXY_BACKEND_HOST_URL_MAP
 PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
 PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
+# enable shard routing for hosts defined in PROXY_SHARD_BACKEND_HOST_URL_MAP
+PROXY_SHARDED_ROUTING_ENABLED=true
+PROXY_SHARD_BACKEND_HOST_URL_MAP=localhost:7777>10|http://kava-shard-10:8545|20|http://kava-shard-20:8545
 # PROXY_MAXIMUM_REQ_BATCH_SIZE is a proxy-enforced limit on the number of subrequest in a batch
 PROXY_MAXIMUM_REQ_BATCH_SIZE=100
-# Configuration for the servcie to connect to it's database
+# Configuration for the service to connect to it's database
 DATABASE_NAME=postgres
 DATABASE_ENDPOINT_URL=postgres:5432
 DATABASE_USERNAME=postgres
