feat: add pprof endpoints Add pprof endpoints with auth middleware

--- a/.env
+++ b/.env
@@ -160,3 +160,6 @@ POSTGRES_PASSWORD=password
 ##### Redis Config
 # for local development don't require a password to connect to the redis server
 ALLOW_EMPTY_PASSWORD=yes
+
+PPROF_USERNAME=kava
+PPROF_PASSWORD=kava
