chore(docs): add docs to development.md and add comments to .env for pprof username and pprof password

--- a/.env
+++ b/.env
@@ -161,5 +161,7 @@ POSTGRES_PASSWORD=password
 # for local development don't require a password to connect to the redis server
 ALLOW_EMPTY_PASSWORD=yes
 
+# Pprof configs
+# for local development use only, true creds are elsewhere
 PPROF_USERNAME=kava
 PPROF_PASSWORD=kava
