--- a/.github/workflows/ci-e2e-no-metrics-tests.yml
+++ b/.github/workflows/ci-e2e-no-metrics-tests.yml
@@ -15,9 +15,7 @@ jobs:
           check-latest: true
           cache: true
       - name: pull pre-built images
-        run: sudo docker compose -f ci.docker-compose.yml pull
-        env:
-          METRIC_DATABASE_ENABLED: "false"
+        run: sudo docker compose -f ci.docker-compose-no-metrics.yml pull
       # In this step, this action saves a list of existing images,
       # the cache is created without them in the post run.
       # It also restores the cache if it exists.
@@ -27,21 +25,15 @@ jobs:
         # Ignore the failure of a step and avoid terminating the job.
         continue-on-error: true
       - name: build and start proxy service and it's dependencies
-        run: sudo docker compose -f ci.docker-compose.yml up -d --build
+        run: sudo docker compose -f ci.docker-compose-no-metrics.yml up -d --build
       - name: wait for proxy service to be running
         run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-running.sh
         env:
             PROXY_CONTAINER_PORT: 7777
-      - name: wait for proxy service metric partitions database tables to be created
-        run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-database-metric-partitions.sh
-        env:
-            # needs to be 1 + number of partitions created by /clients/database/migrations/20230523101344_partition_proxied_request_metrics_table.up.sql
-            MINIMUM_REQUIRED_PARTITIONS: 30
-            PROXY_CONTAINER_PORT: 7777
       - name: run e2e tests
         run: make e2e-test-no-metrics
       - name: print proxy service logs
-        run: sudo docker compose -f ci.docker-compose.yml logs proxy
+        run: sudo docker compose -f ci.docker-compose-no-metrics.yml logs proxy
         # because we especially want the logs if the test(s) fail 😅
         if: always()
       # Finally, "Post Run jpribyl/action-docker-layer-caching@v0.1.1",
