--- a/.github/workflows/ci-e2e-local-tests.yml
+++ b/.github/workflows/ci-e2e-local-tests.yml
@@ -1,4 +1,4 @@
-name: Continuous Integration (E2E Testing Checks without metrics database)
+name: Continuous Integration (E2E Testing Checks with local environment)
 
 on:
   workflow_call:
