feat: update env passing for no metrics ci

--- a/.github/workflows/ci-e2e-no-metrics-tests.yml
+++ b/.github/workflows/ci-e2e-no-metrics-tests.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           go-version: "1.21"
           check-latest: true
-          cache: true
+          cache: false
       - name: pull pre-built images
         run: sudo docker compose -f ci.docker-compose.yml pull
       - name: build and start proxy service and it's dependencies
