--- a/.github/workflows/ci-e2e-no-metrics-tests.yml
+++ b/.github/workflows/ci-e2e-no-metrics-tests.yml
@@ -14,10 +14,12 @@ jobs:
           go-version: "1.21"
           check-latest: true
           cache: false
+      - name: Set environment variable
+        run: echo "METRIC_DATABASE_ENABLED=false" >> $GITHUB_ENV
       - name: pull pre-built images
         run: sudo docker compose -f ci.docker-compose.yml pull
       - name: build and start proxy service and it's dependencies
-        run: echo "METRIC_DATABASE_ENABLED=$METRIC_DATABASE_ENABLED" && METRIC_DATABASE_ENABLED=false sudo docker compose -f ci.docker-compose.yml up -d --build proxy redis
+        run: echo "METRIC_DATABASE_ENABLED=$METRIC_DATABASE_ENABLED" && sudo docker compose -f ci.docker-compose.yml up -d --build proxy redis
         env:
             METRIC_DATABASE_ENABLED: false
       - name: wait for proxy service to be running
