--- a/.github/workflows/ci-e2e-no-metrics-tests.yml
+++ b/.github/workflows/ci-e2e-no-metrics-tests.yml
@@ -14,10 +14,14 @@ jobs:
           go-version: "1.21"
           check-latest: true
           cache: false
+      - name: Set environment variable
+        run: echo "METRIC_DATABASE_ENABLED=false" >> $GITHUB_ENV
       - name: pull pre-built images
-        run: sudo docker compose -f ci.docker-compose.yml -f ci.docker-compose-no-metrics-proxy.yml pull
+        run: sudo docker compose -f ci.docker-compose.yml pull
+      - name: check env vars
+        run: sudo echo "METRIC_DATABASE_ENABLED=$METRIC_DATABASE_ENABLED"
       - name: build and start proxy service and it's dependencies
-        run: sudo docker compose -f ci.docker-compose.yml -f ci.docker-compose-no-metrics-proxy.yml up -d --build proxy redis
+        run: sudo docker compose -f ci.docker-compose.yml --env-file .env --env-file no_metric.env up -d --build proxy redis
       - name: wait for proxy service to be running
         run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-running.sh
         env:
@@ -25,7 +29,7 @@ jobs:
       - name: run e2e tests
         run: SKIP_METRICS=true make e2e-test
       - name: print proxy service logs
-        run: sudo docker compose -f ci.docker-compose-no-metrics-proxy.yml logs proxy
+        run: sudo docker compose -f ci.docker-compose.yml logs proxy
         # because we especially want the logs if the test(s) fail 😅
         if: always()
       # Finally, "Post Run jpribyl/action-docker-layer-caching@v0.1.1",
