--- a/.github/workflows/ci-e2e-tests.yml
+++ b/.github/workflows/ci-e2e-tests.yml
@@ -15,7 +15,7 @@ jobs:
           check-latest: true
           cache: true
       - name: pull pre-built images
-        run: sudo docker compose -f ci.docker-compose.yml -f ci.docker-compose-proxy.yml pull
+        run: sudo docker compose -f ci.docker-compose.yml pull
       # In this step, this action saves a list of existing images,
       # the cache is created without them in the post run.
       # It also restores the cache if it exists.
@@ -25,7 +25,7 @@ jobs:
         # Ignore the failure of a step and avoid terminating the job.
         continue-on-error: true
       - name: build and start proxy service and it's dependencies
-        run: sudo docker compose -f ci.docker-compose.yml -f ci.docker-compose-proxy.yml up -d --build
+        run: sudo docker compose -f ci.docker-compose.yml up -d --build
       - name: wait for proxy service to be running
         run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-running.sh
         env:
@@ -39,7 +39,7 @@ jobs:
       - name: run e2e tests
         run: make e2e-test
       - name: print proxy service logs
-        run: sudo docker compose -f ci.docker-compose-proxy.yml logs proxy
+        run: sudo docker compose -f ci.docker-compose.yml logs proxy
         # because we especially want the logs if the test(s) fail 😅
         if: always()
       # Finally, "Post Run jpribyl/action-docker-layer-caching@v0.1.1",
