--- a/.github/workflows/ci-e2e-no-metrics-tests.yml
+++ b/.github/workflows/ci-e2e-no-metrics-tests.yml
@@ -17,6 +17,8 @@ jobs:
       - name: pull pre-built images
         run: sudo docker compose -f ci.docker-compose.yml pull
       - name: build and start proxy service and it's dependencies
+        # We need to provide additional env file to override the METRIC_DATABASE_ENABLED variable, not via env variable.
+        # Mentioned here: https://github.com/docker/compose/issues/9737
         run: sudo docker compose -f ci.docker-compose.yml --env-file .env --env-file no_metric.env up -d --build proxy redis
       - name: wait for proxy service to be running
         run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-running.sh
@@ -28,5 +30,3 @@ jobs:
         run: sudo docker compose -f ci.docker-compose.yml logs proxy
         # because we especially want the logs if the test(s) fail 😅
         if: always()
-      # Finally, "Post Run jpribyl/action-docker-layer-caching@v0.1.1",
-      # which is the process of saving the cache, will be executed.
