--- a/ci.docker-compose.yml
+++ b/ci.docker-compose.yml
@@ -32,7 +32,9 @@ services:
       # fake the shards by defining shards with existing backends
       PROXY_SHARD_BACKEND_HOST_URL_MAP: localhost:7777>10|https://evmrpcdata.internal.testnet.proxy.kava.io|20|https://evmrpcdata.internal.testnet.proxy.kava.io
       EVM_QUERY_SERVICE_URL: https://evmrpc.internal.testnet.proxy.kava.io
-      METRIC_DATABASE_ENABLED: "${METRIC_DATABASE_ENABLED}"
+      # we need the metric to be used from no_metric.env or by default set up as true, so to test the metrics collection.
+      # doesn't work with the env variable, so need env file. Mentioned here: https://github.com/docker/compose/issues/9737
+      METRIC_DATABASE_ENABLED: "${METRIC_DATABASE_ENABLED}:-true"
     ports:
       - "${PROXY_HOST_PORT}:${PROXY_CONTAINER_PORT}"
       - "${TEST_UNCONFIGURED_PROXY_PORT}:${PROXY_CONTAINER_PORT}"
