--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -15,7 +15,7 @@ jobs:
   e2e-tests:
     needs: [lint-checks, default-checks]
     uses: ./.github/workflows/ci-e2e-tests.yml
-  # run e2e testing without metrics db ci checks against main branch
+  # run e2e testing without metrics db ci for internal testnet checks against main branch
   e2e-no-metrics-tests:
     needs: [lint-checks, default-checks]
     uses: ./.github/workflows/ci-e2e-no-metrics-tests.yml
