feat: add comment

--- a/.env
+++ b/.env
@@ -129,7 +129,7 @@ METRIC_PRUNING_MAX_REQUEST_METRICS_HISTORY_DAYS=45
 # If we use metric database. If set to false,
 # all metric collection and connection to the DB would be disabled
 # and the service would run without any metrics.
-METRIC_DATABASE_ENABLED=${METRIC_DATABASE_ENABLED:-true}
+METRIC_DATABASE_ENABLED=${METRIC_DATABASE_ENABLED}
 # CACHE_ENABLED specifies if cache should be enabled. By default cache is disabled.
 CACHE_ENABLED=true
 # REDIS_ENDPOINT_URL is an url of redis
