--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -11,10 +11,14 @@ jobs:
   # run default ci checks against main branch
   default-checks:
     uses: ./.github/workflows/ci-default.yml
-  # run e2e testing ci checks against main branch
+  # run e2e testing ci for internal testnet checks against main branch
   e2e-tests:
     needs: [lint-checks, default-checks]
     uses: ./.github/workflows/ci-e2e-tests.yml
+  # run e2e testing without metrics db ci for internal testnet checks against main branch
+  e2e-no-metrics-tests:
+    needs: [lint-checks, default-checks]
+    uses: ./.github/workflows/ci-e2e-no-metrics-tests.yml
   # build, tag and publish new service docker images
   release-docker-images:
       needs: [e2e-tests]
